[package]
name = "rsomics-msa-trim"
version = "0.1.0"
description = "Trim MSA columns by gap fraction — Rust replacement for trimAl -gt"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rsomics-msa-trim"
path = "src/main.rs"

[lib]
name = "rsomics_msa_trim"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
needletail = { version = "0.7", default-features = false }

[lints]
workspace = true
